show top 3 and all map url
